--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -6,7 +6,7 @@
     line-height: 3rem;
     
     @include respond(phone) {
-        width: 100%;
+        width: calc(100% - 2rem);
     }
 
     .logo-headline {
